--- a/modules/activities/client/views/activity-eao-partials/activity-eao-detail.html
+++ b/modules/activities/client/views/activity-eao-partials/activity-eao-detail.html
@@ -1,16 +1,4 @@
-<div class="panel" ng-class="{'panel-success': actDetail.activity.valueComponents, 'panel-info': !actDetail.activity.valueComponents}" x-expand-panel='actDetail.activityToggle[actDetail.activity._id]'>
-	<div class="panel-heading">
-		<div class="close close-adjust-top">{{ actDetail.activity.status | uppercase }}</div>
-		<h3 class="panel-title">{{ actDetail.activity.name }}</h3>
-	</div>
-	<div class="panel-body" ng-show="actDetail.activityToggle[actDetail.activity._id]">
-		<div class="row">
-			<div class="col-sm-8">
-				{{ actDetail.activity.description }} {{ actDetail.currentTask }}
-			</div>
-		</div>
-	</div>
-</div>
+<h3 class="activity-title">{{ actDetail.activity.name }}</h3>
 		
 <div class="row">
 
