--- a/modules/activities/client/views/activity-partials/activity-list.html
+++ b/modules/activities/client/views/activity-partials/activity-list.html
@@ -1,4 +1,4 @@
-<panel-sort x-fields="actList.panelSort" x-data="actList.project.activities"></panel-sort>
+<panel-sort x-fields="actList.panelSort" x-data="actList.project.activities" ng-if="0"></panel-sort>
 
 <section class="row">
 	<div ng-repeat="act in actList.project.activities | filter:{'status':actList.activityFilterStatus}" class="col-sm-6 col-md-4 col-lg-3">
