--- a/modules/utils/client/views/partials/modal-select-items.html
+++ b/modules/utils/client/views/partials/modal-select-items.html
@@ -1,7 +1,9 @@
 <div class="modal-header">
-	<div class="pull-right">
+	<div class="pull-right form-inline">
 		<div class="form-group">
-			<input ng-model="selectItems.filter" type="text" class="form-control" placeholder="Filter">
+			<input ng-model="selectItems.filter" type="text" class="input-sm form-control" placeholder="Filter">
+			<button class="btn btn-warning btn-sm" type="button" ng-click="selectItems.cancel()">Cancel</button>
+			<button class="btn btn-primary btn-sm" type="button" ng-click="selectItems.ok()">Save</button>			
 		</div>
 	</div>
 	<h3 class="modal-title">Select {{ selectItems.itemName }}</h3>
@@ -10,7 +12,7 @@
 	<div class="row">
 
 		<div class="col-sm-6">
-		
+			<a class="control-label pull-right" ng-click="selectItems.selectAll()">Select All</a>
 			<label class="control-label">{{ selectItems.itemName }}</label>
 			<div class="well well-sm">
 				<ul class="list-unstyled task-list">
@@ -28,7 +30,7 @@
 
 		</div>
 		<div class="col-sm-6">
-		
+			<a class="control-label pull-right"  ng-click="selectItems.deselectAll()">Deselect All</a>
 			<label class="control-label">Selected {{ selectItems.itemName }}</label>
 			<div class="well well-sm">
 				<ul class="list-unstyled task-list">
