--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -592,10 +592,21 @@ pre {
   font-size: inherit;
   line-height: inherit;
   background-color: transparent;
-  border: 0; }
+  border: 0;
+  white-space: pre-wrap;
+  /* CSS 3 */
+  white-space: -moz-pre-wrap;
+  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;
+  /* Opera 4-6 */
+  white-space: -o-pre-wrap;
+  /* Opera 7 */
+  word-wrap: break-word;
+  /* Internet Explorer 5.5+ */ }
 
 .scrolling-fixed-box {
-  overflow: scroll-y;
+  overflow-y: auto;
+  overflow-x: hidden;
   max-height: 400px;
   display: block; }
 
