--- a/modules/activities/client/views/activity-eao.html
+++ b/modules/activities/client/views/activity-eao.html
@@ -3,7 +3,7 @@
 	{{ actBase.project.name }}
 </h1>
 
-<section id="project-view" class="container-fluid">
+<section id="project-view">
 
 	<tmpl-project-tombstone-horizontal x-project="actBase.project"></tmpl-project-tombstone-horizontal>
 
