--- a/modules/projects/client/views/projects-partials/projects-filter-bar.html
+++ b/modules/projects/client/views/projects-partials/projects-filter-bar.html
@@ -1,41 +1,17 @@
 
 <nav class="navbar navbar-default navbar-sm">
 	<div class="container-fluid">
-		<div class="nav navbar-nav navbar-left navbar-form" x-user-is="admin, user">
-			<div class="form-group">	
-				<div class="btn-group btn-group-sm">
-					<button class="btn btn-default" ng-click="data.view = 'schedule'"	ng-class="{'btn-primary': fbc.data.view === 'schedule'}">Schedule</button>	
-					<button class="btn btn-default" ng-click="data.view = 'map'"		ng-class="{'btn-primary': fbc.data.view === 'map'}">Map</button>
-					<button class="btn btn-default" ng-click="data.view = 'list'"		ng-class="{'btn-primary': fbc.data.view === 'list'}">List</button>
-					<button class="btn btn-default" ng-click="data.view = 'preview'"		ng-class="{'btn-primary': fbc.data.view === 'preview'}">Preview</button>	
-				</div>
-			</div>
-			<div class="form-group" x-user-is="admin">	
-				<div class="btn-group btn-group-sm">
-					<button class="btn btn-default" ng-click="data.group = 'all'"		ng-class="{'btn-primary': fbc.data.group === 'all'}">All</button>
-					<button class="btn btn-default" ng-click="data.group = 'assigned'"	ng-class="{'btn-primary': fbc.data.group === 'assigned'}">Assigned</button>
-					<button class="btn btn-default" ng-click="data.group = 'unassigned'"	ng-class="{'btn-primary': fbc.data.group === 'unassigned'}">Unassigned</button>				
-				</div>
-			</div>
-		</div>
 
 		<div class="nav navbar-nav navbar-right navbar-form">
 			<div class="form-group">
 				<label class="control-label">Filter</label>
-				<input ng-model="fbc.filter.filterKeyword" type="text" class="form-control" placeholder="Filter" ng-change="fbc.updateFilter()">
+				<input ng-model="fbc.filter.$" type="text" class="form-control" placeholder="Filter" ng-change="fbc.updateFilter()">
 			</div>
 			<div class="form-group" x-user-is="admin">
-				<label class="control-label">Type</label>
-				<select ng-model='fbc.filter.filterObject.type' class="form-control" ng-change="fbc.updateFilter()">
+				<label class="control-label">&nbsp;&nbsp;Type</label>
+				<select ng-model='fbc.filter.type' class="form-control" ng-change="fbc.updateFilter()">
 					<option value="">All</option>
 					<option ng-repeat='type in fbc.types' value='{{ type }}'>{{ type }}</option>
-				</select>
-			</div>
-			<div class="form-group" x-user-is="admin">
-				<label class="control-label">Phase</label>
-				<select ng-model='fbc.filter.filterObject.phase' class="form-control" ng-change="fbc.updateFilter()">
-					<option value="">All</option>
-					<option ng-repeat='phase in fbc.phases' value='{{ phase.name }}'>{{ phase.name }}</option>
 				</select>
 			</div>
 		</div>
